--- a/index.html
+++ b/index.html
@@ -1,161 +1,36 @@
 <html>
 <head>
-  <title>Mobilenet VS Google Lens</title>
+  <title>Text magnifier</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.js"></script>
+  <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>
 
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
-  <center>
-    <h3 class="btn btn-primary heading">Case Study:  Mobilenet  VS  Google Lens
+<center>
+  <h3 class="btn btn-danger heading">Change the font-size of text with your wrists and nose
+    <br>
+    <span class="note">NOTE - Get your left and right wrist closer 
+      to reduce the size of the text and to increase the size of 
+      the text keep your left and right wrist far from each other. 
+      Move your nose to move the text.</span>
+    <br>
+
   </h3>
-  <br><br>
-  <img src="google.png" id="google">
-<br>
-<h2>VS</h2>
-<br><br>
-  <img src="mobile.png" id="mobile">
-  <br>
-  <br>
-  <hr>
-  <br>
-  <ol>
-    <div class="test_image_and_result col-xs-12" id="ao">
-
-        <li class="col-sm-4 col-xs-12">
-            <b>Test Image - </b>
-            <img src="one.png" id="one">
-        </li>
-        <h5 class="col-sm-4 col-xs-12">
-        Output on <b>Google Lens</b> -  
-        <span>Purist Water-Bottle</span>
-
-        <h5 class="col-sm-4 col-xs-12">
-            Output on <b>Mobilenet Model</b> -
-            <span>Water-Bottle</span>
-        </h5>
-        <br>
-        <br>
-        <div class="mini_result" class="col-xs-12">
-            <h4>Result - </h4>
-            <hr>
-            <h4>Google Lens is more accurate.</h4>
-        </div>
-    </div>
-    <br>
-    <div class="test_image_and_result col-xs-12" id="bo">
-
-        <li class="col-sm-4 col-xs-12">
-            <b>Test Image - </b>
-            <img src="two.png" id="two">
-        </li>
-        <h5 class="col-sm-4 col-xs-12">
-        Output on <b>Google Lens</b> -
-        <span>Samsung Galaxy S22</span>
-
-        <h5 class="col-sm-4 col-xs-12">
-            Output on <b>Mobilenet Model</b> -
-            <span>Cellphone</span>
-        </h5>
-        <br>
-        <br>
-        <div class="mini_result" class="col-xs-12">
-            <h4>Result - </h4>
-            <hr>
-            <h4>Google Lens is more accurate.</h4>
-        </div>
-    </div>
-    <br>
-    <div class="test_image_and_result col-xs-12" id="co">
-
-        <li class="col-sm-4 col-xs-12">
-            <b>Test Image - </b>
-            <img src="three.png" id="three">
-        </li>
-        <h5 class="col-sm-4 col-xs-12">
-        Output on <b>Google Lens</b> -
-        <span>Apple Beats Solo 3</span>
-
-        <h5 class="col-sm-4 col-xs-12">
-            Output on <b>Mobilenet Model</b> -
-            <span>Microphone</span>
-        </h5>
-        <br>
-        <br>
-        <div class="mini_result" class="col-xs-12">
-            <h4>Result - </h4>
-            <hr>
-            <h4>Google Lens is more accurate.</h4>
-        </div>
-    </div>
-    <br>
-    <div class="test_image_and_result col-xs-12" id="do">
-
-        <li class="col-sm-4 col-xs-12">
-            <b>Test Image - </b>
-            <img src="four.png" id="four">
-        </li>
-        <h5 class="col-sm-4 col-xs-12">
-        Output on <b>Google Lens</b> -
-        <span>Puma X Porshe Sneakers</span>
-
-        <h5 class="col-sm-4 col-xs-12">
-            Output on <b>Mobilenet Model</b> -
-            <span>Running Shoe</span>
-        </h5>
-        <br>
-        <br>
-        <div class="mini_result" class="col-xs-12">
-            <h4>Result - </h4>
-            <hr>
-            <h4>Google Lens is more accurate.</h4>
-        </div>
-    </div>
-    <br>
-    <div class="test_image_and_result col-xs-12" id="eo">
-
-        <li class="col-sm-4 col-xs-12">
-            <b>Test Image - </b>
-            <img src="five.png" id="five">
-        </li>
-        <h5 class="col-sm-4 col-xs-12">
-        Output on <b>Google Lens</b> -
-        <span>Samsung Galaxy Book 2</span>
-
-        <h5 class="col-sm-4 col-xs-12">
-            Output on <b>Mobilenet Model</b> -
-            <span>Moniter/Telivision Sytem</span>
-        </h5>
-        <br>
-        <br>
-        <div class="mini_result" class="col-xs-12">
-            <h4>Result - </h4>
-            <hr>
-            <h4>Google Lens is more accurate.</h4>
-        </div>
-        <br><br>
-        <hr>
-        <br>
-        <h3>Conclusion:   </h3>
-        <h4>Google lens indentifies the exact object. It even identifies the brand and the exact model. This is the reason it wins.</h4>
-        <br>
-        <br>
-    </div>
-    <br>
-  </ol>
-
 </center>
 
 <div class="copy_right_footer">
-    Developed by - Advay Goel
+  Developed by - Advay Goel
 </div>
 
+<script src="main.js"></script>
 </body>
-
 </html>
 
 
